feat: Add detailed price list and service categories to enhance user information

--- a/src/index.html
+++ b/src/index.html
@@ -727,16 +727,176 @@
         </div>
     </div>
 
+    <div class="section section__price" id="price">
+        <div class="img photo photo__instrumenti_na_stole">
+            <picture>
+                <source media="(max-width: 768px)" srcset="/src/img/документы.jpg">
+                <img src="/src/img/документы.jpg" alt="документы" />
+            </picture>
+        </div>
+        <div class="content content_wide animate-once" data-delay="0.4s">
+
+            <h2>
+                <span data-t="price_title">Цены на услуги</span>
+            </h2>
+            <p style="margin-bottom: 20px;">
+                Стандартная ставка: <b>50 лари/час</b>. Итоговая стоимость зависит от авто.
+            </p>
+
+            <h3>⭐ Самые популярные услуги</h3>
+            <ul class="list price-list">
+                <li class="list_item">
+                    <span>Комплексная диагностика (Ходовая + Компьютерная + Осмотр)</span>
+                    <b>120 ₾</b>
+                </li>
+                <li class="list_item">
+                    <span>Диагностика ходовой части (Осмотр на подъемнике)</span>
+                    <b>30 ₾</b>
+                </li>
+                <li class="list_item">
+                    <span>Компьютерная диагностика (Считывание и сброс ошибок)</span>
+                    <b>от 30 ₾</b>
+                </li>
+                <li class="list_item">
+                    <span>Замена масла и масляного фильтра в ДВС</span>
+                    <b>от 40 ₾</b>
+                </li>
+                <li class="list_item">
+                    <span>Замена тормозных дисков и колодок (за 1 ось)</span>
+                    <b>90 - 120 ₾</b>
+                </li>
+                <li class="list_item">
+                    <span>Замена стоек стабилизатора (за пару)</span>
+                    <b>60 ₾</b>
+                </li>
+                <li class="list_item">
+                    <span>Замена свечей зажигания (4-цил. ДВС)</span>
+                    <b>60 ₾</b>
+                </li>
+                <li class="list_item">
+                    <span>Замена масла в АКПП/CVT (частичная)</span>
+                    <b>80 - 150 ₾</b>
+                </li>
+            </ul>
+
+            <h2 class="toggle" data-for="#full-price" >
+                Показать полный прайс-лист ▼
+            </h2>
+            
+            <div id="full-price" class="hidden">
+                
+                <h3>Диагностика и Осмотр</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Комплексная диагностика</span><b>120 ₾</b></li>
+                    <li class="list_item"><span>Диагностика ходовой части / Осмотр на подъемнике</span><b>30 ₾</b></li>
+                    <li class="list_item"><span>Компьютерная диагностика (базовая)</span><b>30 ₾</b></li>
+                    <li class="list_item"><span>Диагностика и поиск неисправности (углубленная)</span><b>от 50 ₾/час</b></li>
+                    <li class="list_item"><span>Диагностика системы охлаждения (на утечки, CO2)</span><b>30 - 60 ₾</b></li>
+                    <li class="list_item"><span>Замер компрессии</span><b>Замена свечей + 10 ₾/цил</b></li>
+                    <li class="list_item"><span>Выездная диагностика</span><b>50 - 80 ₾</b></li>
+                </ul>
+
+                <h3>Техническое обслуживание (ТО)</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Замена масла и масляного фильтра в ДВС</span><b>от 40 ₾</b></li>
+                    <li class="list_item"><span>Замена воздушного фильтра</span><b>10 - 20 ₾</b></li>
+                    <li class="list_item"><span>Замена салонного фильтра</span><b>10 - 30 ₾</b></li>
+                    <li class="list_item"><span>Замена топливного фильтра</span><b>30 - 120 ₾</b></li>
+                    <li class="list_item"><span>Замена масла в АКПП/CVT/DSG (частичная)</span><b>80 - 150 ₾</b></li>
+                    <li class="list_item"><span>Замена масла в МКПП / редукторе</span><b>40 ₾</b></li>
+                    <li class="list_item"><span>Замена масла в раздатке</span><b>40 - 60 ₾</b></li>
+                    <li class="list_item"><span>Замена антифриза</span><b>80 - 150 ₾</b></li>
+                    <li class="list_item"><span>Замена тормозной жидкости</span><b>60 - 100 ₾</b></li>
+                    <li class="list_item"><span>Замена жидкости ГУР</span><b>60 - 80 ₾</b></li>
+                    <li class="list_item"><span>Очистка дроссельной заслонки (с адаптацией)</span><b>от 50 ₾</b></li>
+                    <li class="list_item"><span>Промывка радиаторов (со снятием)</span><b>90 - 280 ₾</b></li>
+                </ul>
+
+                <h3>Ремонт двигателя и навесного оборудования</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Замена ремня ГРМ</span><b>от 300 ₾</b></li>
+                    <li class="list_item"><span>Замена цепи ГРМ</span><b>от 450 ₾</b></li>
+                    <li class="list_item"><span>Снятие/установка ГБЦ (4-цил)</span><b>от 420 ₾</b></li>
+                    <li class="list_item"><span>Снятие/установка ДВС в сборе</span><b>от 2500 ₾</b></li>
+                    <li class="list_item"><span>Снятие/установка турбины</span><b>от 400 ₾</b></li>
+                    <li class="list_item"><span>Переборка турбины (на снятом)</span><b>300 - 500 ₾</b></li>
+                    <li class="list_item"><span>Капитальный ремонт / дефектовка ДВС</span><b>от 1500 ₾</b></li>
+                    <li class="list_item"><span>Замена прокладки клапанной крышки</span><b>60 - 200 ₾</b></li>
+                    <li class="list_item"><span>Замена опор/подушек двигателя</span><b>40 - 250 ₾</b></li>
+                    <li class="list_item"><span>Замена помпы (водяного насоса)</span><b>80 - 300 ₾</b></li>
+                    <li class="list_item"><span>Замена приводного ремня</span><b>50 - 120 ₾</b></li>
+                    <li class="list_item"><span>Замена свечей зажигания (4-цил)</span><b>60 ₾</b></li>
+                    <li class="list_item"><span>Замена радиатора охлаждения</span><b>150 - 550 ₾</b></li>
+                    <li class="list_item"><span>Замена термостата</span><b>60 - 300 ₾</b></li>
+                </ul>
+
+                <h3>Ремонт подвески и ходовой части</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Замена амортизаторов / стоек (шт.)</span><b>50 - 120 ₾</b></li>
+                    <li class="list_item"><span>Замена рычага подвески (шт.)</span><b>40 - 80 ₾</b></li>
+                    <li class="list_item"><span>Замена стоек стабилизатора (пара)</span><b>60 ₾</b></li>
+                    <li class="list_item"><span>Замена рулевой рейки</span><b>250 - 350 ₾</b></li>
+                    <li class="list_item"><span>Замена рулевой тяги и наконечника (сторона)</span><b>60 - 80 ₾</b></li>
+                    <li class="list_item"><span>Замена шаровой опоры</span><b>40 - 80 ₾</b></li>
+                    <li class="list_item"><span>Перепрессовка сайлентблока (на снятом)</span><b>20 ₾</b></li>
+                    <li class="list_item"><span>Замена ступичного подшипника / ступицы</span><b>80 - 240 ₾</b></li>
+                    <li class="list_item"><span>Замена ШРУСа (гранаты)</span><b>120 - 150 ₾</b></li>
+                    <li class="list_item"><span>Снятие/установка приводного вала</span><b>90 - 150 ₾</b></li>
+                    <li class="list_item"><span>Снятие/установка карданного вала</span><b>60 - 150 ₾</b></li>
+                    <li class="list_item"><span>Развал-схождение</span><b>50 - 70 ₾</b></li>
+                </ul>
+
+                <h3>Ремонт трансмиссии</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Замена сцепления МКПП</span><b>350 - 700 ₾</b></li>
+                    <li class="list_item"><span>Снятие/установка АКПП/CVT</span><b>от 600 ₾</b></li>
+                </ul>
+
+                <h3>Ремонт тормозной системы</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Замена тормозных дисков и колодок (ось)</span><b>90 - 120 ₾</b></li>
+                    <li class="list_item"><span>Замена тормозных колодок (без дисков)</span><b>от 60 ₾</b></li>
+                    <li class="list_item"><span>Чистка направляющих (при замене)</span><b>+ 20 ₾</b></li>
+                    <li class="list_item"><span>Переборка суппорта (1 поршень)</span><b>50 - 80 ₾</b></li>
+                    <li class="list_item"><span>Замена колодок ручника (барабанных)</span><b>80 ₾/колесо</b></li>
+                </ul>
+
+                <h3>Электрика и электроника</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Замена АКБ</span><b>20 - 60 ₾</b></li>
+                    <li class="list_item"><span>Замена генератора / стартера</span><b>80 - 200 ₾</b></li>
+                    <li class="list_item"><span>Замена датчиков</span><b>30 - 150 ₾</b></li>
+                    <li class="list_item"><span>Замена лампочек</span><b>5 - 70 ₾</b></li>
+                    <li class="list_item"><span>Ремонт электропроводки</span><b>от 50 ₾/час</b></li>
+                    <li class="list_item"><span>Установка доп. оборудования</span><b>от 100 ₾</b></li>
+                </ul>
+
+                <h3>Кузов, салон и прочее</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Замена лобового стекла</span><b>от 100 ₾</b></li>
+                    <li class="list_item"><span>Замена радиатора печки</span><b>250 - 700 ₾</b></li>
+                    <li class="list_item"><span>Снятие/установка бампера</span><b>50 - 150 ₾</b></li>
+                    <li class="list_item"><span>Поиск и устранение течи в салоне</span><b>100 - 300 ₾</b></li>
+                    <li class="list_item"><span>Разбор/сборка элементов салона</span><b>от 40 ₾</b></li>
+                    <li class="list_item"><span>Слесарные и сварочные работы</span><b>Договорная</b></li>
+                </ul>
+
+            </div>
+        </div>
+    </div>
+
     <footer>
         <p data-t="copyright">
-            <span data-t="copyright">Автосервис Georgia Like Auto &copy; 2025</span>
+            <span data-t="copyright">Автосервис Georgia Like Auto &copy; 2026</span>
         </p>
     </footer>
     <script>
-        const toggler = (e) => {
-            document.querySelector(e.target.getAttribute('data-for')).classList.toggle('hidden');
-        }
-        document.querySelector('.toggle').addEventListener('click', toggler);
+        const togglers = document.querySelectorAll('.toggle');
+        togglers.forEach(t => {
+            t.addEventListener('click', (e) => {
+                document.querySelector(e.target.getAttribute('data-for')).classList.toggle('hidden');
+            });
+        });
     </script>
     <!-- Swiper JS -->
     <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
